--- a/src/main/resources/static/styles/loan-application.css
+++ b/src/main/resources/static/styles/loan-application.css
@@ -94,10 +94,12 @@
 	padding: 1rem;
 	transition: 0.3s ease all;
 	clip-path: polygon(0 0, 100% 0, 100% 0%, 0 0);
+	display: none;
 }
 
 .tooltipInterest.ACTIVE {
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+	display: block;
 }
 
 .prestamojpg {
