--- a/src/main/resources/static/styles/loan-application.css
+++ b/src/main/resources/static/styles/loan-application.css
@@ -1,6 +1,11 @@
+main {
+	height: 100vh;
+}
+
 .formulario-tarjeta {
 	background-image: radial-gradient(circle at 12.5% 12.5%, #e7efff 0, #c7dbff, #7894d0);
 	width: 100%;
+	height: 76vh;
 	max-width: 43.75rem;
 	padding: 3.125rem 1.875rem 1.875rem 1.875rem;
 	text-shadow: 0.0625rem 0.0625rem 0.1875rem black;
