--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -481,6 +481,10 @@ form > box-icon {
 	z-index: 3;
 }
 
+.container-main {
+	height: 100vh;
+}
+
 .div-spinner {
 	position: fixed;
 	display: flex;
