--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -29,7 +29,7 @@ main {
 	}
 
 	#logo {
-		margin-top: 2.5rem !important;
+		margin-top: 2rem !important;
 		width: 9rem;
 	}
 
@@ -140,14 +140,17 @@ main {
 	main,
 	.footer {
 		margin-left: 14.2rem;
-		font-size: 1rem;
+		font-size: 0.9rem;
 	}
 
 	h1 {
+		margin-top: 1rem !important;
+		margin-bottom: 2rem !important;
 		font-size: 1.6rem !important;
 	}
 
 	#logo {
+		margin-top: 2.5rem;
 		width: 5rem;
 	}
 
@@ -158,12 +161,12 @@ main {
 
 	.menu-expanded .cont-client img {
 		margin-top: 1rem;
-		width: 4rem;
-		height: 4rem;
+		width: 3rem;
+		height: 3rem;
 	}
 
 	.cont-menu li {
-		font-size: 1rem;
+		font-size: 0.8rem;
 	}
 
 	.menu-expanded {
@@ -176,6 +179,10 @@ main {
 
 	.cont-menu nav {
 		margin-top: 2rem;
+	}
+
+	.menu-expanded .cont-menu nav a {
+		font-size: 0.8rem;
 	}
 
 	.cont-tarjeta {
@@ -211,8 +218,8 @@ main {
 
 	.menu-expanded .cont-client img {
 		margin-top: 1.5rem;
-		width: 4rem;
-		height: 4rem;
+		width: 3rem;
+		height: 3rem;
 	}
 
 	.menu-expanded {
@@ -224,11 +231,11 @@ main {
 	}
 
 	.menu-expanded .cont-menu nav a {
-		font-size: 0.85rem;
+		font-size: 0.7rem;
 	}
 
 	.cont-menu li {
-		font-size: 0.85rem;
+		font-size: 0.7rem;
 	}
 
 	.cont-tarjeta {
@@ -351,7 +358,7 @@ main {
 	main,
 	.footer {
 		margin-left: 3.5rem;
-		font-size: 0.8rem;
+		font-size: 0.65rem;
 	}
 
 	.login-container {
@@ -394,6 +401,10 @@ main {
 	h1 {
 		margin-bottom: 1.5rem !important;
 		font-size: 1.3rem !important;
+	}
+
+	h3 {
+		font-size: 1rem !important;
 	}
 
 	.cont-menu li {
@@ -535,7 +546,7 @@ button:hover {
 
 h1,
 h2 {
-	font-family: "Pacifico", cursive;
+	font-family: 'Pacifico', cursive;
 }
 
 /* .DEBIT {
@@ -726,7 +737,7 @@ li:hover {
 	width: 2.25rem;
 	float: left;
 	cursor: pointer;
-	content: "";
+	content: '';
 	border-top: 0.375rem solid var(--soft_primary);
 	padding: 0.1875rem;
 	border-bottom: 0.9375rem double var(--soft_primary);
